🔁 Prompt to swap in Pokemon to your team after inputting
- Additionally am extra setting origin for pokemon in soul-linked events

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 - [ ] Add evolution event not working
 
 🌶🌶🌶 Would prominently improve experience & usability
-- [ ] UX: Move Pokemon to team prompt right after adding Pokemon
+- [X] UX: Move Pokemon to team prompt right after adding Pokemon
 - [ ] Timeline: Rearrange locations
 - [ ] Timeline: Delete location
 
