--- a/TODO
+++ b/TODO
@@ -16,6 +16,7 @@
 - [ ] Timeline: Add search and filter
 - [ ] Pokemon: Delete
 - [ ] Pokemon: Delete event
+- [ ] Make new run
 
 🧊 Unseasoned thoughts
 - [-] Scrolling? -- already handled
