🎨 New badge look
- Changed background grey
- Rearranged PokemonIcon file

--- a/TODO
+++ b/TODO
@@ -1,5 +1,6 @@
 🐛 Bugs
 - [X] Add evolution event
+- [ ] Defeat events proc twice
 
 🌶🌶🌶 Would prominently improve experience & usability
 - [X] UX: Move Pokemon to team prompt right after adding Pokemon
