🧂 Organized table for timeline & summary per location

--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@
 
 🌶🌶 Would improve experience in certain scenarios
 - [X] PokemonIcon: Show evolved Pokemon
-- [ ] Timeline: Display pokemon names (possibly events) to the right
+- [X] Timeline: Display pokemon names (possibly events) to the right
 - [ ] Pokemon: Edit pokemon name and nickname -- helps when mistakes are made
 
 🌶 Should have, but low value add rn
