🏝 Rearrange timeline order via drag and drop

--- a/TODO
+++ b/TODO
@@ -4,8 +4,8 @@
 
 🌶🌶🌶 Would prominently improve experience & usability
 - [X] UX: Move Pokemon to team prompt right after adding Pokemon
-- [ ] Timeline: Rearrange locations
-- [ ] Timeline: Delete location
+- [X] Timeline: Rearrange locations
+- [X] Timeline: Delete location
 
 🌶🌶 Would improve experience in certain scenarios
 - [X] PokemonIcon: Show evolved Pokemon
