--- a/TODO
+++ b/TODO
@@ -10,6 +10,7 @@
 🌶🌶 Would improve experience in certain scenarios
 - [X] PokemonIcon: Show evolved Pokemon
 - [X] Timeline: Display pokemon names (possibly events) to the right
+- [ ] Each Pokemon: Notes section
 - [ ] Pokemon: Edit pokemon name and nickname -- helps when mistakes are made
 - [X] Pokemon: Move action
 
