🏃🏻‍♀️ Create your own run!

--- a/TODO
+++ b/TODO
@@ -15,11 +15,11 @@
 - [X] Pokemon: Move action
 
 🌶 Should have, but low value add rn
-- [ ] Roam Research style Legend for icons, or make indicators more obvious
+- [X] Make new run
 - [ ] Timeline: Add search and filter
+- [ ] Roam Research style Legend for icons, or make indicators more obvious
 - [ ] Pokemon: Delete
 - [ ] Pokemon: Delete event
-- [ ] Make new run
 
 🧊 Unseasoned thoughts
 - [-] Scrolling? -- already handled
