--- a/TODO
+++ b/TODO
@@ -16,7 +16,7 @@
 
 🌶 Should have, but low value add rn
 - [X] Make new run
-- [ ] Timeline: Add search and filter
+- [X] Timeline: Add search and filter
 - [ ] Pokemon: Delete
 - [ ] Pokemon: Delete event
 
