🎖 Improve visuals of team view in Summary

--- a/TODO
+++ b/TODO
@@ -5,7 +5,8 @@
 
 🌶🌶 Would improve experience in certain scenarios
 - [X] Summary: Badge progress
-- [ ] Summary: Team
+- [X] Summary: Team
+  - [ ] Improve nametags
 - [ ] Summary: Death/miss count
 - [ ] Summary: Graveyard
 - [ ] Summary: Box
