🎖 Add Graveyard view
Additionally, added new eventType soulMiss to better differentiate misses from kills.

--- a/TODO
+++ b/TODO
@@ -8,7 +8,7 @@
 - [X] Summary: Team
   - [ ] Improve nametags
 - [ ] Summary: Death/miss count
-- [ ] Summary: Graveyard
+- [X] Summary: Graveyard
 - [ ] Summary: Box
 - [ ] Summary: Daycare
 - [ ] Summary: Drag and drop between categories to move
