🎖 Better styles for the Graveyard

--- a/TODO
+++ b/TODO
@@ -7,7 +7,7 @@
 - [X] Summary: Badge progress
 - [X] Summary: Team
   - [ ] Improve nametags
-- [ ] Summary: Death/miss count
+- [X] Summary: Death/miss count
 - [X] Summary: Graveyard
 - [ ] Summary: Box
 - [ ] Summary: Daycare
