🎖 Update nickname and playerName styles

--- a/TODO
+++ b/TODO
@@ -6,7 +6,7 @@
 🌶🌶 Would improve experience in certain scenarios
 - [X] Summary: Badge progress
 - [X] Summary: Team
-  - [ ] Improve nametags
+  - [X] Improve nametags
 - [X] Summary: Death/miss count
 - [X] Summary: Graveyard
 - [ ] Summary: Box
