🎖 Add Boxed Pokemon category

--- a/TODO
+++ b/TODO
@@ -9,13 +9,13 @@
   - [X] Improve nametags
 - [X] Summary: Death/miss count
 - [X] Summary: Graveyard
-- [ ] Summary: Box
+- [X] Summary: Box
 - [ ] Summary: Daycare
 - [ ] Summary: Drag and drop between categories to move
 
 🌶 Should have, but low value add rn
-- [ ] Pokemon: Delete
 - [ ] Pokemon: Delete event
+- [ ] Pokemon: Delete
 
 🧊 Unseasoned thoughts
 - [ ] Roam Research style Legend for icons, or make indicators more obvious
