🐛 Fix React key error

--- a/TODO
+++ b/TODO
@@ -14,6 +14,7 @@
 - [x] Summary: Box
 - [x] Summary: Daycare
 - [ ] Summary: Drag and drop between categories to move
+- [ ] Timeline: Inline editing
 
 🌶 Should have, but low value add rn
 
