--- a/TODO
+++ b/TODO
@@ -2,21 +2,14 @@
 
 🌶🌶🌶 Super cool
 
-- [x] Better linting & null checks
-  - [x] New pokemon not automatically added to team
-- [x] Enable multiple locations on the timeline
-  - [x] Can create
-  - [x] Can reorder
-  - [x] Can differentiate events
-  - [x] Never see UUIDs
 - [ ] Cooler summary view styles
+  - [ ] For three people
 
 🌶🌶 Would improve most experiences or could be cool
 
 - [ ] Box view? TL location in the bottom
 - [ ] Box: Drag and drop between categories to move
 - [ ] Event view?
-- [ ] Refactor from API -> Hooks
 - [ ] Add in React.memos
 - [ ] Switch off of Ant Design
 
