--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@
 🌶🌶🌶 Super cool
 
 - [ ] Switch off of Ant Design
+- [ ] New design!
 - [ ] Timeline: Inline editing
 - [ ] Cooler summary view styles
 
