🏢 Uninstall ant design

--- a/TODO
+++ b/TODO
@@ -2,7 +2,7 @@
 
 🌶🌶🌶 Super cool
 
-- [ ] Switch off of Ant Design
+- [x] Switch off of Ant Design
   - [x] RunHome
   - [x] AddToTimeline
   - [x] Form
