--- a/TODO
+++ b/TODO
@@ -4,8 +4,9 @@
 
 - [x] Switch off of Ant Design
 - [ ] New design!
-  - [ ] New fonts
+  - [x] New fonts
   - [ ] Static background
+  - [ ] New page background & header
   - [ ] New format for timeline
 - [ ] Timeline: Inline editing
 - [ ] Cooler summary view styles
