🏢 Region specific backgrounds

--- a/TODO
+++ b/TODO
@@ -8,8 +8,10 @@
   - [x] Static background
   - [x] New page background & header
   - [x] New format for timeline
+  - [x] Region specific backgrounds
   - [ ] New timeline filters + search input
   - [ ] New pokemon modal
+- [ ] New region!
 - [ ] Timeline: Inline editing
 - [ ] Cooler summary view styles
 
