--- a/TODO
+++ b/TODO
@@ -9,7 +9,7 @@
   - [x] New page background & header
   - [x] New format for timeline
   - [x] Region specific backgrounds
-  - [ ] New timeline filters + search input
+  - [x] New timeline filters + search input
   - [ ] New pokemon modal
   - [x] Fix turning off Grave turns off Badges
 - [ ] New region!
