--- a/TODO
+++ b/TODO
@@ -2,21 +2,28 @@
 
 🌶🌶🌶 Super cool
 
+- [x] Switch off of Ant Design
+- [x] New design!
+  - [x] New fonts
+  - [x] Static background
+  - [x] New page background & header
+  - [x] New format for timeline
+  - [x] Region specific backgrounds
+  - [x] New timeline filters + search input
+  - [x] New pokemon modal
+  - [x] Fix turning off Grave turns off Badges
+- [ ] New region!
+- [ ] Timeline: Inline editing
 - [ ] Cooler summary view styles
-  - [ ] For three people
 
 🌶🌶 Would improve most experiences or could be cool
 
+- [ ] Skeletons while loading
 - [ ] Box view? TL location in the bottom
 - [ ] Box: Drag and drop between categories to move
-- [ ] Event view?
-- [ ] Add in React.memos
-- [ ] Switch off of Ant Design
 
 🌶 Should have, but low value add rn
 
-- [ ] Timeline: Inline editing
-- [ ] Pokemon: Delete
 - [ ] Unit tests
 - [ ] Better help center
 
