--- a/TODO
+++ b/TODO
@@ -2,8 +2,11 @@
 
 🌶🌶🌶 Super cool
 
-- [ ] New region!
 - [ ] Timeline: Inline editing
+  - [ ] Locations
+  - [ ] Origin names
+  - [ ] Nicknames
+- [ ] New region!
 - [ ] Box view? TL location in the bottom
 - [ ] Box: Drag and drop between categories to move
 
