🎁 Basic outline of the box format

--- a/TODO
+++ b/TODO
@@ -7,8 +7,11 @@
   - [ ] Origin names
   - [ ] Nicknames
 - [ ] New region!
-- [ ] Box view? TL location in the bottom
-- [ ] Box: Drag and drop between categories to move
+- [ ] Box View
+  - [ ] Drag and drop between categories to move
+  - [ ] Add new Pokemon
+  - [ ] Styling
+  - [ ] Set current location?
 
 🌶🌶 Would improve most experiences or could be cool
 
